--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,86 @@
-raw_data/encode_ccres/*
+raw_data/encode_ccres/
+raw_data/encode_cres/ENCFF024PQS.bed.gz
+raw_data/encode_cres/ENCFF025KEO.bed.gz
+raw_data/encode_cres/ENCFF028NAN.bigBed
+raw_data/encode_cres/ENCFF034BHY.bed.gz
+raw_data/encode_cres/ENCFF045ZQC.bigBed
+raw_data/encode_cres/ENCFF046TXU.bigBed
+raw_data/encode_cres/ENCFF048AGW.bigBed
+raw_data/encode_cres/ENCFF057KVE.bigBed
+raw_data/encode_cres/ENCFF063IWT.bigBed
+raw_data/encode_cres/ENCFF095SMO.bed.gz
+raw_data/encode_cres/ENCFF118IPF.bigBed
+raw_data/encode_cres/ENCFF137THP.bed.gz
+raw_data/encode_cres/ENCFF141OKN.bigBed
+raw_data/encode_cres/ENCFF152AFP.bed.gz
+raw_data/encode_cres/ENCFF163GCV.bigBed
+raw_data/encode_cres/ENCFF164RLV.bed.gz
+raw_data/encode_cres/ENCFF169NIT.bigBed
+raw_data/encode_cres/ENCFF186HRJ.bigBed
+raw_data/encode_cres/ENCFF187RLW.bigBed
+raw_data/encode_cres/ENCFF205FKB.bed.gz
+raw_data/encode_cres/ENCFF224CJA.bigBed
+raw_data/encode_cres/ENCFF244IEB.bigBed
+raw_data/encode_cres/ENCFF257QEB.bed.gz
+raw_data/encode_cres/ENCFF277SLP.bed.gz
+raw_data/encode_cres/ENCFF278JOB.bigBed
+raw_data/encode_cres/ENCFF281JFE.bigBed
+raw_data/encode_cres/ENCFF284MXI.bed.gz
+raw_data/encode_cres/ENCFF312SCY.bigBed
+raw_data/encode_cres/ENCFF316MRH.bed.gz
+raw_data/encode_cres/ENCFF318JTT.bed.gz
+raw_data/encode_cres/ENCFF322DZO.bed.gz
+raw_data/encode_cres/ENCFF350NWA.bed.gz
+raw_data/encode_cres/ENCFF360RXI.bed.gz
+raw_data/encode_cres/ENCFF362GPG.bigBed
+raw_data/encode_cres/ENCFF375JWG.bigBed
+raw_data/encode_cres/ENCFF386TZM.bigBed
+raw_data/encode_cres/ENCFF389JSK.bigBed
+raw_data/encode_cres/ENCFF424YXV.bed.gz
+raw_data/encode_cres/ENCFF466PWQ.bed.gz
+raw_data/encode_cres/ENCFF475ITB.bed.gz
+raw_data/encode_cres/ENCFF478BCY.bed.gz
+raw_data/encode_cres/ENCFF479RIY.bigBed
+raw_data/encode_cres/ENCFF488QJI.bigBed
+raw_data/encode_cres/ENCFF507HVH.bed.gz
+raw_data/encode_cres/ENCFF516ZJM.bed.gz
+raw_data/encode_cres/ENCFF524SID.bigBed
+raw_data/encode_cres/ENCFF556NXC.bed.gz
+raw_data/encode_cres/ENCFF571FOS.bigBed
+raw_data/encode_cres/ENCFF572DWG.bed.gz
+raw_data/encode_cres/ENCFF582GTV.bigBed
+raw_data/encode_cres/ENCFF604EPU.bigBed
+raw_data/encode_cres/ENCFF606DOD.bed.gz
+raw_data/encode_cres/ENCFF620THB.bigBed
+raw_data/encode_cres/ENCFF632LJU.bed.gz
+raw_data/encode_cres/ENCFF633GHY.bed.gz
+raw_data/encode_cres/ENCFF653ZCA.bed.gz
+raw_data/encode_cres/ENCFF661FXP.bigBed
+raw_data/encode_cres/ENCFF661PLY.bed.gz
+raw_data/encode_cres/ENCFF666XFC.bed.gz
+raw_data/encode_cres/ENCFF669TTI.bigBed
+raw_data/encode_cres/ENCFF715SJC.bed.gz
+raw_data/encode_cres/ENCFF738NDA.bigBed
+raw_data/encode_cres/ENCFF750WMI.bed.gz
+raw_data/encode_cres/ENCFF751RMP.bed.gz
+raw_data/encode_cres/ENCFF778PTM.bigBed
+raw_data/encode_cres/ENCFF790PDO.bigBed
+raw_data/encode_cres/ENCFF803TAS.bed.gz
+raw_data/encode_cres/ENCFF824OZP.bigBed
+raw_data/encode_cres/ENCFF838QAW.bigBed
+raw_data/encode_cres/ENCFF841KWY.bed.gz
+raw_data/encode_cres/ENCFF842GND.bed.gz
+raw_data/encode_cres/ENCFF844JZF.bigBed
+raw_data/encode_cres/ENCFF850JRQ.bigBed
+raw_data/encode_cres/ENCFF898SJN.bigBed
+raw_data/encode_cres/ENCFF898UAX.bed.gz
+raw_data/encode_cres/ENCFF900LHN.bed.gz
+raw_data/encode_cres/ENCFF931ZNP.bed.gz
+raw_data/encode_cres/ENCFF935DDY.bigBed
+raw_data/encode_cres/ENCFF937AZG.bed.gz
+raw_data/encode_cres/ENCFF946AMW.bigBed
+raw_data/encode_cres/ENCFF954AFR.bed.gz
+raw_data/encode_cres/ENCFF954ZED.bigBed
+raw_data/encode_cres/ENCFF970REE.bigBed
+raw_data/encode_cres/ENCFF974UWG.bed.gz
+raw_data/encode_cres/metadata.tsv
