--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,11 @@
 title: "NoCoSMiCC"
 description: "Non-coding somatic driver discovery in colorectal cancer with CNV-aware background mutation-rate modeling."
-remote_theme: pages-themes/minimal@v0.2.0
+url: "https://rhagan94.github.io"
+baseurl: "/NoCoSMiCC"
+
+remote_theme: "mmistakes/minimal-mistakes@4.27.3"
 plugins:
   - jekyll-remote-theme
+
+minimal_mistakes_skin: "dark"
+markdown: kramdown
