--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,11 +1,3 @@
 title: "NoCoSMiCC"
 description: "Non-coding somatic driver discovery in colorectal cancer with CNV-aware background mutation-rate modeling."
-url: "https://rhagan94.github.io"
-baseurl: "/NoCoSMiCC"
-
-remote_theme: "mmistakes/minimal-mistakes@4.27.3"
-plugins:
-  - jekyll-remote-theme
-
-minimal_mistakes_skin: "dark"
-markdown: kramdown
+theme: jekyll-theme-cayman
